# um3-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  authenticator.hpp  music.hpp  timelapse.hpp  ultimaker3.hpp  um3tools.cpp  um3tools_config.h.in
data/: imperialmarch.xml  mandalorian.xml
